fix color contrast issues

--- a/src/components/CallToAction/_calltoaction.scss
+++ b/src/components/CallToAction/_calltoaction.scss
@@ -23,7 +23,7 @@
     }
 
     a {
-        background-color: #9484c6;
+        background-color: #7D69BA;
         margin: auto;
         width: fit-content;
     }
