--- a/src/components/Hero/_hero.scss
+++ b/src/components/Hero/_hero.scss
@@ -16,7 +16,7 @@
 
     .hero-pre-heading {
         display: inline-block;
-        color: #9c8881;
+        color: #817065;
         font-size: .75rem;
         font-weight: 600;
         letter-spacing: .1rem;
